# coco

./: CONTRIBUTING.md  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/formatters/: conventional.rs  freeform.rs  mod.rs
src/git/: mod.rs
src/providers/: mod.rs  ollama.rs
src/ui/: mod.rs
