[package]
name = "coco"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.46", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
git2 = "0.20"
owo-colors = "4"
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6"