[package]
name = "coco"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
owo-colors = "4"
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"